--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
     <h2>Relatório de Aplicação - TOPGUN</h2>
     <label>Data de aplicação:</label>
     <input id="data_aplicacao" type="date" />
-    <label>Frente:</label><input id="frente" placeholder="01" />
-    <label>Piloto:</label><input id="piloto" placeholder="Matheus" />
-    <label>Auxiliar:</label><input id="auxiliar" placeholder="Jefferson" />
+    <label>Frente:</label><input id="frente" placeholder="Digite a frente de serviço" />
+    <label>Piloto:</label><input id="piloto" placeholder="Digite o nome do Piloto" />
+    <label>Auxiliar:</label><input id="auxiliar" placeholder="Digite o nome do Auxiliar" />
 
     <div id="fazendas"></div>
     <button class="btn" onclick="addFazenda()">+ Adicionar Fazenda</button>
