--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     }
 
     pre {
-      background: #ddc50c;
+      background: #4a88ad1f;
       padding: 15px;
       white-space: pre-wrap;
       word-wrap: break-word;
