--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
   <div class="logo">
     <!-- Substitua pelo caminho da logo -->
-    <img src="C:\Users\pedro\OneDrive\Desktop\topgun-relatorios\logo_topgun.png.png" alt="Logo TOPGUN">
+    <img src="logo_topgun.png" alt="Logo TOPGUN">
   </div>
 
   <h1>Painel de Aplicação</h1>
