--- a/rendimento_aplicacao.html
+++ b/rendimento_aplicacao.html
@@ -56,6 +56,12 @@
     h2, h3 {
       color: #1f2937;
     }
+    h2 {
+    color: #1f2937;
+    text-align: center;
+    margin-bottom: 20px;
+    font-family: 'Orbitron', sans-serif;
+}
 
     label {
       display: block;
