--- a/rendimento_aplicacao.html
+++ b/rendimento_aplicacao.html
@@ -205,7 +205,7 @@
   <div class="shape top-left"></div>
   <div class="shape bottom-right"></div>
   <div class="container">
-    <h2>Rendimento Aplicação - TOP GUN PULVERIZAÇÕES</h2>
+    <h2><i data-lucide="calendar-days"></i> RENDIMENTO APLICAÇÃO - TOP GUN PULVERIZAÇÕES</h2>
     <label>Data de aplicação:</label>
     <input id="data_aplicacao" type="date" />
     
