--- a/index.html
+++ b/index.html
@@ -24,10 +24,15 @@
     }
 
     .logo img {
-      width: 120px;
+      width: 400px;
       height: auto;
+      transition: transform 0.3s ease, filter 0.3s ease;
     }
-
+    .logo img:hover {
+    transform: scale(1.08); /* aumenta levemente */
+    filter: drop-shadow(0px 0px 20px #34d399); /* sombra verde neon */
+    cursor: pointer;
+    }
     h1 {
       font-size: 1.5rem;
       margin-bottom: 30px;
