--- a/programacao_aplicacao.html
+++ b/programacao_aplicacao.html
@@ -99,6 +99,13 @@
       font-size: 1rem;
       width: 100%;
       transition: background 0.3s;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+       gap: 8px;
+    }
+    .btn * {
+    pointer-events: none; /* Permite que clique em qualquer parte do botão conte */
     }
 
     .btn:hover {
