--- a/programacao_aplicacao.html
+++ b/programacao_aplicacao.html
@@ -57,7 +57,7 @@
     }
 
     h2 {
-      color: #1f2937;
+      color: #59734a;
       text-align: center;
       margin-bottom: 20px;
       font-family: 'Orbitron', sans-serif;
@@ -179,6 +179,7 @@
   </style>
 </head>
 <body>
+    
   <!-- Ícones de drone animados -->
   <div class="drone-icon drone-1">
     <i data-lucide="drone"></i>
@@ -194,7 +195,7 @@
   </div>
 
   <div class="container">
-    <h2><i data-lucide="calendar-days"></i> PROGRAMAÇÃO DE TRABALHO</h2>
+    <h2><i data-lucide="drone"></i> PROGRAMAÇÃO DE TRABALHO - TOP GUN PULVERIZAÇÕES</h2>
     
     <label>Data para aplicação:</label>
     <input type="date" id="data_aplicacao">
@@ -447,6 +448,8 @@
         toast.classList.remove('show');
       }, 3000);
     }
+
+      lucide.createIcons();
   </script>
 </body>
 </html>
