--- a/rendimento_aplicacao.html
+++ b/rendimento_aplicacao.html
@@ -378,6 +378,9 @@
           <option value="">Selecione</option>
           <option value="Área total">Área total</option>
           <option value="Catação">Catação</option>
+          <option value="Mapeamento">Mapeamento</option>
+          <option value="Monitoramento">Monitoramento</option>
+          <option value="Pulverização">Pulverização</option>
         </select>
         
         <label>Tipo de Produto:</label>
@@ -385,6 +388,8 @@
           <option value="">Selecione</option>
           <option value="Herbicida">Herbicida</option>
           <option value="Inseticida">Inseticida</option>
+          <option value="Fungicida">Fungicida</option>
+          <option value="Fertilizante">Fertilizante</option>
           <option value="Cotesia">Cotesia</option>
           <option value="Maturador">Maturador</option>
         </select>
