--- a/rendimento_aplicacao.html
+++ b/rendimento_aplicacao.html
@@ -537,7 +537,7 @@
           talhoes.forEach(t => {
             const num = t.querySelectorAll("input")[0].value;
             const areaAplicada = parseFloat(t.querySelectorAll("input")[1].value) || 0;
-            relatorio += `- Talhão ${num} | Área: ${areaAplicada.toFixed(2)} ha\n`;
+            relatorio += `- Talhão ${num} | Área Aplicada: ${areaAplicada.toFixed(2)} ha\n`;
             subtotal += areaAplicada;
           });
         }
