--- a/programacao_aplicacao.html
+++ b/programacao_aplicacao.html
@@ -393,7 +393,7 @@
       "MG": [
         "Delta - Delta",
         "Delta - Volta Grande",
-        "Floretadora - Santa Cecília (João Pinheiro - MG)",
+        "Florestadora - Santa Cecília (João Pinheiro - MG)",
         "Parque de Bioenergia Lagoa da Prata (Lagoa da Prata - MG)"
       ],
       "SP": [
@@ -578,3 +578,4 @@
   </script>
 </body>
 </html>
+
