--- a/rendimento_aplicacao.html
+++ b/rendimento_aplicacao.html
@@ -345,7 +345,7 @@
       "MG": [
         "Delta - Delta (Delta - MG)",
         "Delta - Volta Grande (Conceição das Alagoas - MG)",
-        "Floretadora - Santa Cecília (João Pinheiro - MG)",
+        "Florestadora - Santa Cecília (João Pinheiro - MG)",
         "Parque de Bioenergia Lagoa da Prata (Lagoa da Prata - MG)"
       ],
       "SP": [
@@ -689,3 +689,4 @@
   </script>
 </body>
 </html>
+
