--- a/programacao_aplicacao.html
+++ b/programacao_aplicacao.html
@@ -313,6 +313,7 @@
       <option value="Phellipe Gomes ">Phellipe Gomes</option> 
       <option value="Abdias Neto">Abdias Neto</option>
       <option value="Ailton Gabriel">Ailton Gabriel</option>
+      <option value="Victor Hugo">Victor Hugo</option>  
     </select>
     
     <label>Drone:</label>
@@ -578,4 +579,5 @@
   </script>
 </body>
 </html>
+
 
