--- a/rendimento_aplicacao.html
+++ b/rendimento_aplicacao.html
@@ -308,6 +308,7 @@
       <option value="Phellipe Gomes">Phellipe Gomes</option>
       <option value="Abdias Neto">Abdias Neto</option>
       <option value="Ailton Gabriel">Ailton Gabriel</option>
+      <option value="Victor Hugo">Victor Hugo</option>  
     </select>
 
     <div id="fazendas"></div>
@@ -689,4 +690,5 @@
   </script>
 </body>
 </html>
+
 
