--- a/rendimento_aplicacao.html
+++ b/rendimento_aplicacao.html
@@ -289,15 +289,12 @@
     <label>Piloto:</label>
     <select id="piloto">
       <option value="">Selecione o Piloto</option>
+      <option value="Alexandre Alves">Alexandre Alves</option>
+      <option value="Felipe Santos">Felipe Santos</option>
+      <option value="Heitor Ferreira">Heitor Ferreira</option>
       <option value="Maicon Silva">Maicon Silva</option>
       <option value="Matheus Pias">Matheus Pias</option>
-      <option value="Felipe Santos">Felipe Santos</option>
-      <option value="Alexandre Alves">Alexandre Alves</option>
-      <option value="Juan Pablo">Juan Pablo</option>
-      <option value="Juliano Fernandes">Juliano Fernandes</option>
-      <option value="David Costa">David Costa</option>
-      <option value="Pedro Augusto">Pedro Augusto</option>
-      <option value="Ygor Lucas">Ygor Lucas</option>
+      <option value="Luiz Paulo">Luiz Paulo</option>
     </select>
 
     <label>Auxiliar:</label>
@@ -305,10 +302,8 @@
       <option value="">Selecione o auxiliar</option>
       <option value="Antonio Soares">Antonio Soares</option>
       <option value="Jefferson Lopes">Jefferson Lopes</option>
-      <option value="Phellipe Gomes">Phellipe Gomes</option>
-      <option value="Abdias Neto">Abdias Neto</option>
       <option value="Ailton Gabriel">Ailton Gabriel</option>
-      <option value="Victor Hugo">Victor Hugo</option>  
+      <option value="Victor Hugo">Victor Hugo</option>
     </select>
 
     <div id="fazendas"></div>
@@ -690,5 +685,6 @@
   </script>
 </body>
 </html>
+
 
 
