--- a/programacao_aplicacao.html
+++ b/programacao_aplicacao.html
@@ -294,15 +294,12 @@
     <label>Piloto:</label>
     <select id="piloto">
       <option value="">Selecione o Piloto</option>
+      <option value="Alexandre Alves">Alexandre Alves</option>
+      <option value="Felipe Santos">Felipe Santos</option>
+      <option value="Heitor Fererreira">Heitor Fererreira</option>
+      <option value="Luiz Paulo">Luiz Paulo</option>
       <option value="Maicon Silva">Maicon Silva</option>
       <option value="Matheus Pias">Matheus Pias</option>
-      <option value="Felipe Santos">Felipe Santos</option> 
-      <option value="Alexandre Alves">Alexandre Alves</option>
-      <option value="Juan Pablo">Juan Pablo</option>
-      <option value="Juliano Fernandes">Juliano Fernandes</option>
-      <option value="David Costa">David Costa</option>
-      <option value="Pedro Augusto">Pedro Augusto</option>
-      <option value="Ygor Lucas">Ygor Lucas</option>
     </select>
 
     <label>Auxiliar:</label>
@@ -310,8 +307,6 @@
       <option value="">Selecione o auxiliar</option>
       <option value="Antonio Soares">Antonio Soares</option>
       <option value="Jefferson Lopes">Jefferson Lopes</option>
-      <option value="Phellipe Gomes ">Phellipe Gomes</option> 
-      <option value="Abdias Neto">Abdias Neto</option>
       <option value="Ailton Gabriel">Ailton Gabriel</option>
       <option value="Victor Hugo">Victor Hugo</option>  
     </select>
@@ -320,10 +315,7 @@
     <select id="drone">
       <option value="">Selecione o drone</option>
       <option value="DJI Agras T20">DJI Agras T20</option>
-      <option value="DJI Agras T25">DJI Agras T25</option>
-      <option value="DJI Agras T30">DJI Agras T30</option>
       <option value="DJI Agras T40">DJI Agras T40</option>
-      <option value="DJI Agras T50">DJI Agras T50</option>
     </select>
     
     <label>Objetivo:</label>
@@ -333,7 +325,6 @@
       <option value="Catação">Aplicação - Catação</option>
       <option value="Mapeamento">Mapeamento</option>
       <option value="Monitoramento">Monitoramento</option>
-      <option value="Pulverização">Pulverização</option>
     </select>
     
     <label>Tipo de Produto:</label>
@@ -579,5 +570,6 @@
   </script>
 </body>
 </html>
+
 
 
