--- a/rendimento_aplicacao.html
+++ b/rendimento_aplicacao.html
@@ -396,7 +396,10 @@
         
         <label>OS:</label>
         <input name="os" placeholder="Número da OS" />
-        
+
+        <label>Área OS (ha):</label>
+        <input name="area-os" placeholder="Área da OS" type="number" min="0" step="0.1" />
+
         <label>Objetivo:</label>
         <select name="objetivo">
           <option value="">Selecione</option>
@@ -549,6 +552,7 @@
         relatorio += ` *FAZENDA ${index + 1}:* ${nome}\n`;
         relatorio += ` *Código:* ${codigo}\n`;
         relatorio += ` *OS:* ${os}\n`;
+        relatorio += ` *Área OS:* ${fazenda.querySelector("input[name='area-os']").value} ha\n`;
         relatorio += ` *Objetivo:* ${objetivo}\n`;
         relatorio += ` *Produto:* ${produto}\n`;
         relatorio += ` *Status:* ${status === "Finalizada" ? "✅ Finalizada" : "🟡 Em andamento"}\n\n`;
