--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@
     <button class="btn btn-interno" onclick="window.location.href='programação_cotesia.html'">
       Programação Aplicação Cotésia
     </button>
+    <button class="btn btn-interno" onclick="window.location.href='status_operacional_cotesia.html'">
+      Status Operacional
+    </button>
     <button class="btn btn-interno" onclick="window.location.href='rendimento_cotesia.html'">
       Rendimento Aplicação Cotésia
     </button>
