--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     }
 
     .btn-interno {
-      background: #2563eb; /* azul */
-      color: #fff;
+      background: #fefffd; /* azul */
+      color: #1a5735;
     }
     .btn-interno:hover {
       background: #1e40af;
@@ -173,4 +173,5 @@
   </footer>
 </body>
 </html>
+
 
