--- a/index.html
+++ b/index.html
@@ -69,15 +69,15 @@
       color: #1a5735;
     }
     .btn-interno:hover {
-      background: #1e40af;
+      background: #34d399;
     }
 
     .btn-voltar {
-      background: #34d399; /* vermelho */
+      background: #d33e34; /* vermelho */
       color: #fff;
     }
     .btn-voltar:hover {
-      background: #205213;
+      background: #c40c07;
     }
 
     @media (max-width: 400px) {
@@ -173,5 +173,6 @@
   </footer>
 </body>
 </html>
+
 
 
